# blinkstickcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blinkstickcpp.pc.in  clang-format
blinkstickcpp/: CMakeLists.txt
blinkstickcpp/include/blinkstick/: blinkstick.h  blinkstick.hpp  device.h  device.hpp
blinkstickcpp/src/: blinkstick.cpp  device.cpp
blinkstickcpp/test/: CMakeLists.txt  blinkstick_test.cpp
cmake/: FindHIDAPI.cmake  blinkstickcppConfig.cmake.in
